# trading

./: .gitignore
auto-trader-01/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  approach.md  design.md  docker-compose.yaml  hybrid_strategy.md  optimization.md  pyproject.toml  tv_integration.md
auto-trader-01/agents/monitor/: __init__.py  agent.py
auto-trader-01/agents/risk_guard/: __init__.py  agent.py
auto-trader-01/agents/strategy_engine/: base_strategy.py  engine.py  signal_cache.py  strategy_context.py  strategy_registry.py
auto-trader-01/agents/trader/: __init__.py  agent.py
auto-trader-01/api/: main.py  state.py
auto-trader-01/api/routers/: backtest.py  debug.py  health.py  orders.py  positions.py  signals.py  telegram_webhook.py  tradingview.py  watchlist.py
auto-trader-01/backtester/: __main__.py  cli.py  historical_loader.py  report.py  simulation_runner.py
auto-trader-01/config/markets/: india.yaml  us.yaml
auto-trader-01/config/risk/: default.yaml
auto-trader-01/config/strategies/: active.yaml  fundamental.yaml  hybrid.yaml  technical.yaml  tradingview.yaml
auto-trader-01/config/system/: default.yaml
auto-trader-01/data/: backtest_india.json
auto-trader-01/frontend/src/: App.tsx  (+1 more)
auto-trader-01/migrations/: env.py
auto-trader-01/scripts/: backtest_india.py  backtest_signals.py  signal_noise_report.py  start.sh  test_order_flow.py  test_recovery.py  upstox_auth.py  validate_fundamental.py
auto-trader-01/tests/: conftest.py  test_financial_accuracy.py  test_order_execution.py  test_reliability.py  test_risk_guard.py
(+55 files in other folders)
