[project]
name = "auto-trader-01"
version = "0.1.0"
description = "Event-driven algorithmic trading system for US and Indian equity markets"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "yfinance>=0.2.51",
    "pandas>=2.2.0",
    "tenacity>=9.0.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "infrastructure", "backtester"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
